> padding &  letter-spacing fix > 📲 Developer
[Fix: ]

--- a/src/componentes/inferior/inferior.css
+++ b/src/componentes/inferior/inferior.css
@@ -10,14 +10,14 @@
 }
 
 .aire {
-  padding: 0 7px 0 7px;
+  padding: 0 20px 0 20px;
 }
 
 .link {
   text-decoration: none;
   color: #ffc107;
   font-family: 'consolas';
-  letter-spacing: 0.5px;
+  letter-spacing: -0.5px;
   font-size: 0.75rem;
 
 }
